# ChangeLog for net-mail/mailx
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailx/ChangeLog,v 1.10 2003/05/27 16:08:11 taviso Exp $

  27 May 2003; Tavis Ormandy <taviso@gentoo.org>
  mailx-8.1.2.20021129-r1.ebuild:
  removing gcc hardcode for ccc users.

*mailx-8.1.2.20021129-r1 (27 Mar 2003)

  27 Mar 2003; Jon Portnoy <avenj@gentoo.org> mailx-8.1.2.20021129-r1.ebuild 
	digest-mailx-8.1.2.20021129-r1 multifix.diff : 
  Added multifix.diff to fix bug #18259, reported by C. Brewer.


  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords


*mailx-8.1.2.20021129 (01 Dec 2002)

  07 Dec 2002; Nick Hadaway <raker@gentoo.org>
  mailx-8.1.2.20021129.ebuild :
  Updated some file permissions as noted on bug #8031.  Marked stable.

  01 Dec 2002; Nick Hadaway <raker@gentoo.org>
  mailx-8.1.2.20021129.ebuild, files/digest-mailx-8.1.2.20021129,
  files/20021129-cvs.diff.bz2 :
  mailx ported from openbsd cvs repository pulled 11/29/2002.
  Currently marked unstable.

*mailx-8.1.1.11 (1 Feb 2002)

  28 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  12 Sep 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :

  added virtual/mta depend

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.