@@ -1,10 +1,12 @@
 MD5 25dd4d17d51eeeed328dce050d1726f1 mailx-8.1.2.20021129.ebuild 1218
+MD5 3da4e1b43907f731379dd0edb4f53836 mailx-8.1.2.20021129-r2.ebuild 1431
 MD5 eeb7b950c7f4e852cf79884ff509bd7e mailx-8.1.1.11.ebuild 1310
 MD5 8fb2ebe027d7009703786dab8c44f76a mailx-8.1.2.20021129-r1.ebuild 1403
-MD5 3a9ca09cbb807c251e1ca399e4a46b42 ChangeLog 1705
+MD5 058e9651cc34d1c93d5e38bd6eb8b9d9 ChangeLog 1934
 MD5 b55cd4835b1455405746de99343a1829 files/digest-mailx-8.1.2.20021129 67
 MD5 b55cd4835b1455405746de99343a1829 files/digest-mailx-8.1.1.11 67
 MD5 0fabe69aadfc340d678b9d355e0d451e files/digest-mailx-8.1.2.20021129-r1 192
+MD5 0fabe69aadfc340d678b9d355e0d451e files/digest-mailx-8.1.2.20021129-r2 192
 MD5 e1210a2c73f4c28a1ddfef47de783040 files/mailx-8.1.1.11.diff 59404
 MD5 03da0db1eb8ae098acadd868243269e9 files/mailx-8.1.1.11-version.diff 314
 MD5 3aa3c2c06077baa24f3a60f4f07f4e5a files/mailx-8.1.1.11-Makefile.diff 697
