@@ -1,0 +1,3 @@
+MD5 c779002cb043b57fd5198ec2032cacb0 mailx_8.1.1.orig.tar.gz 89069
+MD5 49a4dbee10b9997127dd4d3001bd5b04 multifix.diff.gz 91955
+MD5 c75f19ddb9dd35d6d22e5d63e8b96d06 20021129-cvs.diff.bz2 64969
