@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/mailx
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailx/ChangeLog,v 1.10 2003/05/27 16:08:11 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailx/ChangeLog,v 1.11 2003/06/09 19:03:12 raker Exp $
+
+*mailx-8.1.2.20021129-r2 (09 Jun 2003)
+
+  09 Jun 2003; Nick Hadaway <raker@gentoo.org> 
+  mailx-8.1.2.20021129-r2.ebuild, files/digest-mailx-20021129-r2:
+  Added a dependancy on net-mail/mailx-support for /usr/libexec/lockspool
 
   27 May 2003; Tavis Ormandy <taviso@gentoo.org>
   mailx-8.1.2.20021129-r1.ebuild:
